# rust-neural-network

./: Cargo.toml  README.md
src/: convolutional_neural_network.rs  find_number.rs  load.rs  main.rs  neural_network.rs  performance.rs  test.rs  train.rs
weights/: bias_1.json  bias_2.json  weight_1.json  weight_2.json
