[package]
name = "rust-neural-network"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"
mnist = "0.6.0"
rand = "0.9.0"
serde_json = "1.0.140"


[[ bin ]]
name = "main"
path = "src/main.rs"

[[ bin ]]
name = "train"
path = "src/train.rs"

[[ bin ]]
name = "performance"
path = "src/performance.rs"

