[package]
name = "rust-neural-network"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.0"
mnist = "0.6.0"
rand = "0.9.0"
serde_json = "1.0.140"
image = "0.25.6"
ndarray-stats = "0.6.0"


[[ bin ]]
name = "main"
path = "src/main.rs"

[[ bin ]]
name = "train"
path = "src/train.rs"

[[ bin ]]
name = "performance"
path = "src/performance.rs"

[[ bin ]]
name = "find_number"
path = "src/find_number.rs"

